fix alignment

--- a/themes/ropensci/static/styles/search.css
+++ b/themes/ropensci/static/styles/search.css
@@ -2,7 +2,9 @@ mark {
   background-color: pink !important;
 }
 
-
+#search-form {
+    margin-top: -.5rem;
+}
 
 .algolia-autocomplete .aa-hint {
   color: #999;
